      distribution named after itself.

    * All modules to handle HMMER programs output have been moved to their
      own distribution named Bio-SearchIO-hmmer.  This also includes the
      programs bp_hmmer_to_table and bp_parse_hmmsearch.

    * Bio::DB::MeSH and related Bio::Phenotype::MeSH modules have moved
      to their own distribution Bio-DB-MeSH.


1.7.2 - "Entebbe"

    [Bugs]
    
    * #247 - Omit unnecessary parent_id attribute added by GFF3Loader [nathanweeks]
    * #245 - Code coverage fixes [zmughal,cjfields]
    * #237 - Fix warning in Bio::DB::IndexedBase [willmclaren,bosborne]
    * #238 - Use a Travis cron job for network tests [zmughal,cjfields]
    * #218 - Bio::DB::Flat::BinarySearch should use _fh() instead of fh() as fh() does not take arguments in [thibauthourlier,bosborne]
    * #227 - Bio::SeqIO Ignores first line of sequence [VAR121,bosborne]
    * #223 - Use Travis Perl helper script and enable coverage [zmughal,cjfields]
    * #222 - Fix test RemoteDB/Taxonomy.t: requires networking [zmughal,cjfields]
    * #216 - Apply carsonhh's patch (Inline::C fixes) [carsonh,bosborne]
    * #213 - Support FTS5 in Bio::DB::SeqFeature::Store::DBI::SQLite [nathanweeks,bosborne]
    * #210 - Sorting qualifiers while write embl files [hdevillers,cjfields]
    * #209 - Fixed bug in _toDsspKey() [jvolkening,hlapp]
    
    [Code changes]
    
    * PAML-related code from bioperl and bioperl-run are now in a separate distribution on CPAN [carandraug]

1.7.1 - "Election"

    [Bugs]
    
    * Minor release to incorporate fix for CPAN indexing, which
      prevented proper updates [cjfields]
    * Fix problem in managing Target attribute for gff3 [Jukes34]
    * Minor bug fixes related to NCBI HTTPS support [cjfields]

1.7.0 - "Disney"

    [New site]
    
    * We have migrated to Github Pages. This was actually planned, but the
      recent OBF server compromise forced our hand.
      